--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.3.5",
     "pandas>=2.3.3",
+    "pytest>=9.0.2",
     "scikit-learn>=1.8.0",
     "tensorflow>=2.20.0",
 ]
