--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "black>=25.12.0",
     "numpy>=2.3.5",
     "pandas>=2.3.3",
     "pytest>=9.0.2",
